--- a/tests/Sequence_PanZoom.html
+++ b/tests/Sequence_PanZoom.html
@@ -3,7 +3,7 @@
 <head>
     <title>panzoom Example</title>
 		 <script type="text/javascript" src="../mwEmbed.js?debug=true"></script> 
-		<!--  <script type="text/javascript" src="../jsScriptLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 	-->
+		<!--  <script type="text/javascript" src="../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 	-->
 		<script type="text/javascript">
 			mw.setConfig( 'overlayControls', false );
 		</script>
