--- a/tests/Sequence_PanZoom.html
+++ b/tests/Sequence_PanZoom.html
@@ -5,7 +5,7 @@
 		 <script type="text/javascript" src="../mwEmbed.js?debug=true"></script> 
 		<!--  <script type="text/javascript" src="../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 	-->
 		<script type="text/javascript">
-			mw.setConfig( 'overlayControls', false );
+			mw.setConfig( 'EmbedPlayer.OverlayControls', false );
 		</script>
 </head>
 <body>
