--- a/modules/Sequencer/tests/Sequence_Editor.html
+++ b/modules/Sequencer/tests/Sequence_Editor.html
@@ -6,8 +6,8 @@
  	<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
  	<script type="text/javascript">
  		mw.ready( function(){
- 			mw.load( 'SequenceEdit', function(){ 	 			
-	 			$j('#seqContainer').sequenceEdit({
+ 			mw.load( 'Sequencer', function(){ 	 			
+	 			$j('#seqContainer').sequencer({
 	        		'smilSource' : 'SampleEditorSequenceSmil.xml',
 	        		//set the add media wizard to only include commons:   
 	        		'AddMediaConf':{
