--- a/modules/KalturaSupport/tests/SequenceEvents.html
+++ b/modules/KalturaSupport/tests/SequenceEvents.html
@@ -28,10 +28,9 @@ function jsKalturaPlayerTest( videoId ){
                       'playerPlayed',
                       'playerUpdatePlayhead',
                       'playerPaused',
-                      'playerPlayEnd',
-                      'playbackComplete'
+                      'playerPlayEnd'
                      ];
-	var eventListNoBindRemove = [ 'adStart', 'adEnd' ];
+	var eventListNoBindRemove = [ 'adStart', 'adEnd', 'playbackComplete' ];
 	
 	function jsCallbackReady( videoId ){
 		logEvent( 'jsCallbackReady: ' + videoId );
@@ -62,7 +61,6 @@ function jsKalturaPlayerTest( videoId ){
 		}
 		// add an addition listener for kdpEmpty to call change media: 
 		window['doChangeMedia']= function(){
-			kdp.removeJsListener( 'kdpEmpty', 'doChangeMedia' );
 			kdp.sendNotification('changeMedia', { 'entryId' : '0_uka1msg4' });
 		}
 		kdp.addJsListener( 'kdpEmpty', 'doChangeMedia');
