more recurring event tracking for sequence events

--- a/modules/KalturaSupport/tests/SequenceEvents.html
+++ b/modules/KalturaSupport/tests/SequenceEvents.html
@@ -25,12 +25,10 @@ function jsKalturaPlayerTest( videoId ){
 	}
 
 	var eventList = ['kdpEmpty',
-                      'playerPlayed',
                       'playerUpdatePlayhead',
-                      'playerPaused',
                       'playerPlayEnd'
                      ];
-	var eventListNoBindRemove = [ 'adStart', 'adEnd', 'playbackComplete' ];
+	var eventListNoBindRemove = [ 'playerPaused', 'playerPlayed', 'adStart', 'adEnd', 'playbackComplete' ];
 	
 	function jsCallbackReady( videoId ){
 		logEvent( 'jsCallbackReady: ' + videoId );
