--- a/modules/KalturaSupport/tests/SequenceEvents.html
+++ b/modules/KalturaSupport/tests/SequenceEvents.html
@@ -72,7 +72,7 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Sequence Events test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<div id="playbackModeSelector"></div>
 <br />
 Show: <a id="adPlayer" href="#">Ad Player</a> | <a id="noAdPlayer" href="#">No Ad Player</a> 
 <br />
